# stdy

./: CMakeLists.txt
include/stdy/: common.h  float.h  integer.h  string.h
src/: float.c  integer.c  string.c
